[B]Advanced Emulator Launcher | version 0.9.3 | xx March 2017[/B]

WIP      MAME and Software Lists Favourites.

WIP      Allow user to choose default assets as AEL does.

WIP      Display MAMEINFO.DAT in Machine context menu.

WIP      Display HISTORY.DAT in Machine context menu.

WIP      At launching, do not check ROMs for machines which doesn't have ROMs.
         Requires loading machines database, which will slow down launching process a lot!
         A hashed database of machines is necessary to speed up plugin.
         Now, disable ROM checking.


[B]Advanced Emulator Launcher | version 0.9.2 | 12 February 2017[/B]

FEATURE  Ability to sort cataloged filters by number of machines.

FEATURE  New Main Filter "Machines with no ROMs".

FEATURE  Launch parents with no clones from the parents list in Catalogued filters.

FEATURE  Use a fancy name for well-known MAME drivers.

FEATURE  On filter `Machines by Software List`, substitute short SL name by the proper SL name.

FEATURE  Display MAME stdout/stderr.

FEATURE  Scan Software Lists.

FEATURE  Launch machines with software lists.
        
FIX      Use SORT_METHOD_LABEL_IGNORE_FOLDERS insead of SORT_METHOD_LABEL. This avoids folders
         to be rendered first when sorting listitems alpahbetically.


[B]Advanced Emulator Launcher | version 0.9.1 | 04 February 2017[/B]

FEATURE  AML only works on Krypton now. Updated addon.xml with new fields.

FEATURE  Add support for nplayers.ini.

FEATURE  Count machines in "Extract MAME.xml" step and not in "Build MAME database" step.

FEATURE  Print the number of clones each machine has. In general, print the number of items
         on a submenu.

FEATURE  Add catalog by Devices. This will help launching software list machines.

FEATURE  In a parent list, if there is not clones, then add the ability to launch games from the
         parent list. Only coded for indexed machines and not for cataloged machines.